# poetry_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  modules.rst  template.rst
docs/api/: conf.py  index.rst
docs/test/: conf.py  index.rst
script/: __init__.py
template/: sample.py
template/module/: calc.py
tests/: conftest.py  test_sample.py  test_template.py
tests/module/: test_calc.py
