[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
Sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
