[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Hirose Tomoki <hirose.tomoki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
Sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
toml = "^0.10.2"
logzero = "^1.6.2"
commonmark = "^0.9.1"
recommonmark = "^0.6.0"
pre-commit = "^2.8.2"
radon = "^4.3.2"

[tool.poetry.scripts]
test = "script:test"
format = "script:format"
lint = "script:lint"
document = "script:document"
metrics = "script:metrics"

[tool.black]
line-length = 150
target-version = ['py38']
include = '\.py?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
